--- a/pyrite/source/theme/memberList/_memberList.scss
+++ b/pyrite/source/theme/memberList/_memberList.scss
@@ -15,7 +15,7 @@
 #{c(memberList wrap)} {
 	background: transparent;
 	min-width: auto;
-	flex-basis: 0px;
+	// flex-basis: 0px;
 }
 #{c(memberList members)} {
 	background: transparent;
